<resources>
    <string name="app_name">Background Remover</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_arrow">Arrow</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="msg_alert" translatable="false">Are you want to exit this app</string>
    <string name="exit" translatable="false">Exit</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="catagories" translatable="false">Catagories</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="remove_background" translatable="false">Remove Backgrounds \nlike a Pro</string>
    <string name="photo_editor" translatable="false">Photo Editor</string>
    <string name="camera" translatable="false">Camera</string>
    <string name="back_remove" translatable="false">Background \n Remove</string>
    <string name="gallery" translatable="false">Save \n Photo</string>
    <string name="background_remove" translatable="false">Background Remove</string>
    <string name="remove_backgroung" translatable="false">Pick Image</string>
    <string name="save" translatable="false">Save</string>
    <string name="close" translatable="false">Close</string>
    <string name="open" translatable="false">Open</string>
    <string name="rate_us" translatable="false">Rate us</string>
    <string name="we_work" translatable="false">We work super hard to serve you better and would \n love to know how would you rate our app?</string>
    <string name="your_opinion" translatable="false">Your opinion matters to us!</string>
    <string name="share_meg" translatable="false">Are you sure you want to exist from this app?</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="ok" translatable="false">OK</string>
    <string name="saved_photo" translatable="false">Saved Photos</string>
    <string name="delete" translatable="false">Delete</string>
    <string name="share" translatable="false">Share</string>
    <string name="about_us" translatable="false">About us</string>
    <string name="shared_app" translatable="false">Shared App</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="no_photo_available" translatable="false">No Photo Available</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="about_us_details" translatable="false">Background Remover Edit Photo is a powerful app that swiftly removes backgrounds from photos with precision and ease. Transform your images effortlessly in just a few taps, and unleash your creativity by replacing backgrounds. Perfect for professional photographers, social media users, and anyone looking to enhance their photos instantly. Try it now and experience the magic of Background Remover.</string>
    <string name="specific_mode">For the best result, make sure your image is viewed in this specific mode</string>
</resources>