<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:backgroundTint="@color/trans"

    android:padding="@dimen/_10sdp"
   >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit"
                android:fontFamily="@font/inriasans_regular"
                android:textStyle="bold"
                android:textColor="@color/tex"
                android:textSize="@dimen/_20sdp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/want"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inriasans_regular"
                android:layout_marginTop="@dimen/_13sdp"
                android:text="@string/share_meg"
                android:textColor="@color/tex"
                android:textSize="@dimen/_12sdp"
                android:layout_gravity="center"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_13sdp"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="@dimen/_12ssp"
                    android:background="@color/trans"
                    android:textColor="@color/tex"
                    android:fontFamily="@font/inriasans_regular"
                    app:layout_constraintEnd_toStartOf="@+id/ok"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/_40sdp"
                   />

                <TextView
                    android:id="@+id/ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:background="@color/trans"
                    android:textColor="@color/tex"
                    android:fontFamily="@font/inriasans_regular"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginEnd="@dimen/_25sdp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>