<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawerLayout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:paddingTop="@dimen/_30sdp"
    android:backgroundTint="@color/white"
    android:layout_height="match_parent"
    tools:context=".FrameActivity">


    <TextView
        android:id="@+id/dashtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/dashboard"
        android:textColor="@color/dashboard"
        android:textSize="@dimen/_18ssp"
        android:fontFamily="@font/poppins_regular"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <ImageView
        android:id="@+id/setting"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/setting"
        android:scaleType="fitCenter"
        android:padding="@dimen/_3sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/lin_lay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/p1"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_margin="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashtext">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_background"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginStart="@dimen/_3sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:src="@drawable/p2" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/cataGories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="@dimen/_19sdp"
        android:text="@string/catagories"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lin_lay" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cataGories"
        app:layout_constraintVertical_bias="0.0">


        <LinearLayout
            android:id="@+id/photoEditor"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@color/box1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_40sdp"
                android:fontFamily="@font/poppins_regular"
                android:src="@drawable/pheditor" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/photo_editor"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cameraBox"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10ssp"
            android:background="@color/box2"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoEditor">

            <ImageView
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/camera" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/camera"
                android:fontFamily="@font/poppins_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineRemove"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_80sdp"
            android:background="@color/box3"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_15sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/photoEditor"
            app:layout_constraintTop_toTopOf="@+id/photoEditor">

            <ImageView
                android:id="@+id/imgCamera"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/back_remove"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/save_gallery"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@color/box4"
            android:layout_marginEnd="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/cameraBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cameraBox"
            app:layout_constraintTop_toBottomOf="@+id/lineRemove">

            <ImageView
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/gallery" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:gravity="center"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/gallery"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/frame1"
        android:backgroundTint="@color/white"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <include
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/frame"
            layout="@layout/include_small_native_ad"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>