<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.burhanrashid52.photoediting.Frametwo">

    <RelativeLayout
        android:id="@+id/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:id="@+id/finishh"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_10sdp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:padding="@dimen/_5sdp"
            android:text="@string/background_remove"
            android:textColor="@color/dashboard"
            android:textSize="@dimen/_17ssp" />
        <Button
            android:id="@+id/download"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:visibility="invisible"
            android:layout_alignParentEnd="true"
            android:drawableStart="@drawable/ic_baseline_file_download_24"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/caution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specific_mode"
        app:layout_constraintTop_toBottomOf="@+id/nav_bar"
        android:padding="@dimen/_20sdp"
        android:visibility="visible"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="@dimen/_15ssp"
        android:layout_marginTop="@dimen/_15sdp"/>
    <ImageView
        android:id="@+id/image_view"
        android:padding="@dimen/_17sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toBottomOf="@+id/caution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/person"
        />
    <Button
        android:id="@+id/next"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_53sdp"
        android:text="@string/remove_backgroung"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/round_btn_two"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/back"
        android:layout_width="@dimen/_240sdp"
        android:layout_height="@dimen/_53sdp"
        android:text="@string/background_remove"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        android:visibility="invisible"
        android:background="@drawable/round_btn_two"
        app:layout_constraintTop_toBottomOf="@+id/image_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/frame1"
        android:backgroundTint="@color/white"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       >
        <include
            android:layout_margin="@dimen/_5sdp"
            android:id="@+id/frame"
            layout="@layout/include_small_native_ad"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>